# api-serverless

./: .gitignore  build.sh  readme.md  stack.yaml
app/: pyproject.toml
app/auth/: __init__.py  index.py
app/handlers/: index.py
