[tool.poetry]
name = "sls-api"
version = "0.1.0"
description = ""
authors = ["Leonardo Araujo <ledharaujo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
